# Smart-Report

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  users.db
doc-asset/: flowcharts.excalidraw
generated_report/Impact_of_LLMs_over_the_Future_of_Jobs__20260215_182445/: Impact_of_LLMs_over_the_Future_of_Jobs__20260215_182445.docx
generated_report/Impact_of_LLMs_over_the_Future_of_Jobs__20260215_182812/: Impact_of_LLMs_over_the_Future_of_Jobs__20260215_182812.docx
generated_report/India_and_USA_Relations_on_the_trade_deal_20260215_212515/: India_and_USA_Relations_on_the_trade_deal_20260215_212515.docx
notebook/: Research.ipynb  fix_search.py  test.ipynb  wiki.ipynb
research_and_analysis/api/: main.py
research_and_analysis/api/routes/: report_routes.py
research_and_analysis/api/services/: report_service.py
research_and_analysis/logger/: __init__.py  custom_logger.py
research_and_analysis/utils/: model_loader.py
research_and_analysis/workflows/: interview_workflow.py  report_generator_workflow.py
