[project]
name = "smart-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community==0.3.30",
    "langchain-core==0.3.81",
    "langchain-google-genai==2.1.8",
    "langchain-groq==0.3.6",
    "langchain-openai==0.3.32",
    "langgraph==0.6.8",
    "logger>=1.4",
    "structlog>=25.4.0",
    "tavily-python==0.7.12",
    "wikipedia==1.4.0",
]

# Optional: authors, license
authors = [{ name = "Akash soni" }]
license = { text = "Proprietary" }


[tool.setuptools]
packages = ["research_and_analysis"]
